@@ -1,32 +1,45 @@
 package domain;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Arrays;
 
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.nio.file.attribute.UserPrincipal;
-
-import static org.junit.jupiter.api.Assertions.*;
-
 class StringCalculatorTest {
     @Test
-    @DisplayName("구분자 찾기 테스트")
-    void 구분자_찾기_테스트() {
+    @DisplayName("기본 구분자 찾기 테스트")
+    void 기본_구분자_찾기_테스트() {
 
         //given
         StringCalculator stringcalculator = new StringCalculator();
 
-        String userData ="//;\\n1;2;3";
+        String userData = "1,2,3";
+        String expected = "[,;]";
+
+        //when
+        String result = stringcalculator.stringClassification(userData);
+
+        //then
+        Assertions.assertEquals(expected, result);
+    }
+
+    @Test
+    @DisplayName("커스텀_구분자 찾기 테스트")
+    void 커스텀_구분자_찾기_테스트() {
+
+        //given
+        StringCalculator stringcalculator = new StringCalculator();
+
+        String userData = "//;|n1;2;3";
         String expected = ";";
 
         //when
-        String result = stringcalculator.findCustom(userData);
+        String result = stringcalculator.stringClassification(userData);
 
         //then
-        assertEquals(expected, result);
+        Assertions.assertEquals(expected, result);
     }
 
 
@@ -37,14 +50,14 @@ class StringCalculatorTest {
         //given
         StringCalculator stringcalculator = new StringCalculator();
 
-        String userData ="//;\\n1;2;3";
-        String expected = "1;2;3";
+        String userData = "//;|n1;2;3;4;5";
+        String expected = "1;2;3;4;5";
 
         //when
-        String result = stringcalculator.reLocation(userData);
+        String result = stringcalculator.reLocationNumber(userData);
 
         //then
-        assertEquals(expected, result);
+        Assertions.assertEquals(expected, result);
     }
 
     @Test
@@ -54,14 +67,15 @@ class StringCalculatorTest {
         //given
         StringCalculator stringcalculator = new StringCalculator();
 
-        String userData ="1;2;3";
-        String [] expected ={"1","2","3"};
+        String userData = "1;2;3";
+        String customSeparator = ";";
+        String[] expected = {"1", "2", "3"};
 
         //when
-        String[] result = stringcalculator.changeData(userData, ";");
+        String[] result = stringcalculator.splitString(userData,customSeparator);
 
         //then
-        assertArrayEquals(expected, result);
+        Assertions.assertArrayEquals(expected, result);
     }
 
     @Test
@@ -71,14 +85,14 @@ class StringCalculatorTest {
         //given
         StringCalculator stringcalculator = new StringCalculator();
 
-        String[] numberData ={"1","2","3"};
-        List<Integer> expected = Arrays.asList(1, 2, 3);
+        String[] numberData = {"1", "2", "3"};
+        List<Integer> expected = List.of(1, 2, 3);
 
         //when
         List<Integer> result = stringcalculator.changeType(numberData);
 
         //then
-        assertEquals(expected, result);
+        Assertions.assertEquals(expected, result);
     }
 
     @Test
@@ -88,49 +102,16 @@ class StringCalculatorTest {
         //given
         StringCalculator stringcalculator = new StringCalculator();
 
-        List<Integer> list = Arrays.asList(1,2,3,4,5);
+        List<Integer> processingData = List.of(1, 2, 3);
 
-        int expected = 15;
-
-        //when
-        int result = stringcalculator.sum(list);
-
-        //then
-        assertEquals(expected, result);
-    }
-
-    @Test
-    @DisplayName("기본 문자 테스트")
-    void 기본_문자_테스트() {
-
-        //given
-        StringCalculator stringcalculator = new StringCalculator();
-
-        String userData ="1;2;3";
         int expected = 6;
 
         //when
-        int result = stringcalculator.classificationBasicSymbol(userData);
+        int result = stringcalculator.sum(processingData);
 
         //then
-        assertEquals(expected, result);
+        Assertions.assertEquals(expected, result);
     }
 
-    @Test
-    @DisplayName("커스텀 문자 합 테스트")
-    void 커스텀_문자_합_테스트() {
-
-        //given
-        StringCalculator stringcalculator = new StringCalculator();
-
-        String userData ="//;|n1;2;3";
-        int expected = 6;
-
-        //when
-        int result = stringcalculator.customSymbolSum(userData);
-
-        //then
-        assertEquals(expected, result);
-    }
 }
 
